// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonChangeRadio render should render correctly backward 1`] = `
<ForwardRef>
  <Component
    image=""
    parameter="backward"
  />
</ForwardRef>
`;

exports[`ButtonChangeRadio render should render correctly forward 1`] = `
<ForwardRef>
  <Component
    image=""
    parameter="forward"
  />
</ForwardRef>
`;

exports[`ButtonChangeRadio render should render correctly without parameters 1`] = `
<ForwardRef>
  <Component
    image=""
    parameter="forward"
  />
</ForwardRef>
`;
